--- a/_posts/2018-01-01-info.md
+++ b/_posts/2018-01-01-info.md
@@ -1,13 +1,18 @@
 ---
 layout: post
 title: Info
+permalink: /info
 ---
 
-Hello, 
+Hello,
 
-I am glad that you found your way to our Website. 
+I am glad that you found your way to our Website.
 
-A few month ago I started this streamer community on *[Instagram](https://www.instagram.com/twitchsquads)* and *[Twitch](https://www.twitch.tv/twitchsquads)*. It grew from month to month. At some point it was just too much to handle
+A few month ago I started this streamer community on *[Instagram](https://www.instagram.com/twitchsquads)* and *[Twitch](https://www.twitch.tv/twitchsquads)*.
+
+<!--more-->
+
+It grew from month to month. At some point it was just too much to handle
 for one person. Especially when I started the Discord Server to connect everyone. At this point we got 750+ streamers in there, connecting, hosting, streaming together and helping each other to help and grow their audience.
 So I needed to get some help. That was the point where I met my Moderators, and later on my SquadGuards to keep the Discord in shape.
 
