Info, streamershowcase und News

--- a/_posts/news/2018-01-20-online.md
+++ b/_posts/news/2018-01-20-online.md
@@ -3,4 +3,4 @@ layout: post
 title: twitchsquads.com is online!
 categories: news
 ---
-Lorem ipsum..
+After the Instagram Groupchats, The Discordserver, *[Twitter](https://www.twitter.com/twitchsquads)* and *[Facebook](https://www.facebook.com/twitchsquads)*, we finally got a Webpage.
